Added menu animation

--- a/shared/layout/Menu/Menu.module.css
+++ b/shared/layout/Menu/Menu.module.css
@@ -41,15 +41,7 @@
 }
 
 .secondLevelBlock {
-	display: none;
-}
-
-.secondLevelBlockOpened {
-	display: block;
-}
-
-.secondLevelBlockOpened:last-child {
-	margin-bottom: 20px;
+	overflow: hidden;
 }
 
 .thirdLevel {
@@ -63,6 +55,7 @@
 	font-size: 14px;
 	line-height: 19px;
 }
+
 
 .thirdLevelActive,
 .thirdLevel:hover {
