--- a/app/(site)/page.module.css
+++ b/app/(site)/page.module.css
@@ -1,14 +1,6 @@
-.main {
+.notFound {
 	display: flex;
+	justify-content: center;
 	align-items: center;
-	flex-direction: column;
-
-	justify-content: space-between;
-
-	min-height: 100vh;
-	padding: 6rem;
-}
-
-.nav {
-	border: 1px solid darkcyan;
+	min-height: 80vh;
 }
