--- a/shared/components/Product/Product.module.css
+++ b/shared/components/Product/Product.module.css
@@ -1,6 +1,8 @@
 .product {
 	display: grid;
+	/* stylelint-disable-next-line max-line-length */
 	grid-template-columns: [start] 70px [logoend] 30px [titlestart] calc(50% - 100px) [middle] 1fr [pricestart] auto [priceend] 40px [creditstart] auto [creditend] 40px [ratestart] auto [end];
+
 	margin-top: 30px;
 	padding: 30px;
 }
@@ -18,6 +20,7 @@
 .price,
 .priceTitle {
 	grid-column: pricestart / priceend;
+
 	white-space: nowrap;
 }
 
@@ -29,6 +32,7 @@
 .rating,
 .rateTitle {
 	grid-column: ratestart / end;
+
 	white-space: nowrap;
 }
 
@@ -42,19 +46,16 @@
 	grid-column: start / middle;
 }
 
-.advBlock {
-	grid-column: middle / end;
-}
-
 .logo img {
 	border-radius: 5px;
 }
 
 .title {
-	font-weight: 600;
-	font-size: 20px;
-	line-height: 27px;
 	align-self: flex-end;
+
+	font-size: 20px;
+	font-weight: 600;
+	line-height: 27px;
 }
 
 .category {
@@ -63,9 +64,10 @@
 
 .price,
 .credit {
+	align-self: flex-end;
+
 	font-size: 20px;
 	line-height: 27px;
-	align-self: flex-end;
 }
 
 .month {
@@ -82,16 +84,17 @@
 }
 
 .description {
+	margin-bottom: 15px;
+
 	font-size: 16px;
 	line-height: 24px;
-	margin-bottom: 15px;
 }
 
 .priceTitle,
 .creditTitle,
 .rateTitle {
-	font-weight: 300;
 	font-size: 14px;
+	font-weight: 300;
 	line-height: 19px;
 }
 
@@ -100,35 +103,41 @@
 }
 
 .advBlock {
+	grid-column: middle / end;
+
 	font-size: 16px;
 	line-height: 22px;
 }
 
 .advTitle {
-	font-weight: bold;
 	margin-bottom: 5px;
+
+	font-weight: bold;
 }
 
 .advantages {
-	border-left: 2px solid #1DC37E;
-	padding-left: 15px;
 	margin-bottom: 20px;
+	padding-left: 15px;
+
+	border-left: 2px solid #1DC37E;
 }
 
 .disadvantages {
-	border-left: 2px solid var(--red);
 	padding-left: 15px;
+
+	border-left: 2px solid var(--red);
 }
 
 .characteristics {
 	display: grid;
-	grid-template-columns: auto 1fr auto;
-	padding-right: 60px;
 	align-items: baseline;
-	gap: 10px;
+
+	padding-right: 60px;
 
 	font-size: 16px;
 	line-height: 32px;
+	grid-template-columns: auto 1fr auto;
+	gap: 10px;
 }
 
 .characteristicsName {
@@ -136,12 +145,14 @@
 }
 
 .characteristicsDots {
-	border-bottom: 1px dashed var(--gray-light);
 	margin-bottom: 5px;
+
+	border-bottom: 1px dashed var(--gray-light);
 }
 
 .reviews {
 	overflow: hidden;
+
 	padding: 30px;
 }
 
@@ -151,8 +162,7 @@
 
 @media screen and (max-width: 1320px) {
 	.product {
-		grid-template-columns:
-			70px 30px auto 40px auto 40px 1fr;
+		grid-template-columns: 70px 30px auto 40px auto 40px 1fr;
 		grid-template-areas:
 			"logo . title title title title title"
 			"logo . tags tags tags tags tags"
@@ -163,12 +173,12 @@
 			"feature feature feature feature feature feature feature"
 			"advBlock advBlock advBlock advBlock advBlock advBlock advBlock"
 			"hr2 hr2 hr2 hr2 hr2 hr2 hr2"
-			"actions actions actions actions actions actions actions"
-		;
+			"actions actions actions actions actions actions actions";
 	}
 
 	.logo {
 		grid-area: logo;
+
 		margin-bottom: 20px;
 	}
 
@@ -178,6 +188,7 @@
 
 	.tags {
 		grid-area: tags;
+
 		margin-bottom: 20px;
 	}
 
@@ -215,6 +226,7 @@
 
 	.feature {
 		grid-area: feature;
+
 		margin-bottom: 20px;
 	}
 
@@ -231,11 +243,9 @@
 	}
 }
 
-
 @media screen and (max-width: 640px) {
 	.product {
-		grid-template-columns:
-			70px 30px 1fr;
+		grid-template-columns: 70px 30px 1fr;
 		grid-template-areas:
 			"logo . title"
 			"logo . tags"
@@ -247,8 +257,7 @@
 			"feature feature feature"
 			"advBlock advBlock advBlock"
 			"hr2 hr2 hr2"
-			"actions actions actions"
-		;
+			"actions actions actions";
 	}
 
 	.price {
@@ -263,7 +272,6 @@
 		margin-bottom: 10px;
 	}
 }
-
 
 @media screen and (max-width: 480px) {
 	.product {
@@ -283,7 +291,6 @@
 			"feature"
 			"advBlock"
 			"hr2"
-			"actions"
-		;
+			"actions";
 	}
 }
